# TRADE-MACD-BB-BOT

./: .env.example  README.md  pyproject.toml
src/: AGENT.md  main.py
src/config/: settings.py
src/exchange/: binance_rest.py  binance_ws.py  funding_rate.py  open_interest.py  order_book.py  recent_trades_list.py  taker_buy_sell_volume.py  volume_profile.py
src/indicator/: ai.py  bollingerband.py  ema.py  macd.py  market_analyzer.py
src/models/: candle.py  position.py
src/notifications/: telegram.py
src/risk/: position_size.py  stop_loss.py
src/strategies/: macd_bb_strategy.py
src/test/: backtest.py
