[project]
name = "botmacdbb"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "binance-sdk-derivatives-trading-usds-futures (>=10.4.0,<11.0.0)",
    "python-telegram-bot (>=22.7,<23.0)",
    "pandas-ta (>=0.4.71b0,<0.5.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]
[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
start = "src.main:run_with_flask"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
